--- a/site/style.css
+++ b/site/style.css
@@ -22,6 +22,9 @@ body {
 	min-height:100%; 
   }
 
+
+
+
   a:link {
 	text-decoration: none;
 	color: rgb(213, 116, 233);
@@ -35,6 +38,175 @@ body {
 	text-align: center;
   }
   
+
+
+
+
+
+       /* NAVBAR */
+
+
+
+  
+ .nav-container{width:80%;display:flex;align-items:center;position:relative;height:15vh;margin:auto;}
+
+  nav{position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 9999;
+	width: 100%;
+	background-color:#000000;}
+
+  
+  nav .nav-item{position:absolute;right:0;display:flex;list-style:none}
+  nav .nav-item li{margin:15px}
+  nav .nav-item a{text-decoration:none;font-family:Raleway,sans-serif;font-size:1.5em;color:#d124b4;font-weight:800}
+
+
+
+ /* MOBILE*/
+
+
+
+
+@media screen and (max-width:999px){
+
+	 .about{
+		 width:100%;
+	 }
+
+	 .about h1{
+		 font-size: 40px;
+		
+     }
+
+	 .about p{
+		font-size: 20px;
+		width: 100%;
+	 }
+	
+
+
+	nav{display:none}
+	.intro h2{display: none;}
+
+	
+	.nav-toggle{
+		
+		position: fixed;
+		top: 0;
+		z-index: 9999;
+		width: 100%;
+		background: rgb(0, 0, 0);
+		}
+	
+	.nav-toggle a{
+         
+		color: white;
+		text-decoration: none;}
+
+	
+
+
+	.nav-toggle .ul{display: flex; }
+
+	.menu li a {
+		
+		display: block;
+		padding: 25px 5px;
+	  }
+	.submenu {
+		order: 1;
+		font-size: 20px;
+		list-style-type: none;
+	
+	  }
+
+	.menu li.subitem a {
+		padding: 15px;
+	  }
+	.submenu {
+		display: none;
+	  }
+	.submenu-active .submenu {
+		display: block;
+	  }
+	.has-submenu i {
+		font-size: 12px;
+	  }
+	 
+	.subitem a {
+		padding: 10px 15px;
+	  }
+	.submenu-active {
+		background-color: rgb(0, 0, 0);
+		border-radius: 3px;
+	}
+	  .toggle {
+		  display: none;
+		padding-left: 47%;
+		order: 1;
+		font-size: 20px;
+	  }
+	  .item.button {
+		order: 2;
+	  }
+	  .item {
+		
+		width: 100%;
+		text-align: center;
+		
+	  }
+	  .active .item {
+		display: block;
+	  }
+
+	
+}
+
+
+
+
+
+
+
+
+
+@media screen and (min-width:1000px){
+	.nav,.nav-toggle{display:none}
+}
+
+
+
+
+.nav .nav-menu{position:fixed;top:0;height:100vh;width:100vw;display:flex;justify-content:center;align-items:center;transition-delay:.25s;visibility:hidden;z-index:+9}
+.nav-menu ul{list-style:none;-webkit-tap-highlight-color:transparent}
+.nav-menu ul a{-webkit-tap-highlight-color:transparent;text-decoration:none;font-family:Raleway,sans-serif;font-size:40px;color:#d124b4;font-weight:800}
+.nav .visible{transition-delay:.25s;visibility:visible}
+
+  
+
+
+
+
+
+
+
+
+    /* ABOUT */
+
+
+
+ .intro h2{
+
+	text-align: center;
+	color:  rgb(163, 25, 156);
+	font-size: 100px;
+	margin-top: 20%;
+	margin-bottom: 20%;
+
+ }
+
 .banner-text {
 	width: 100%;
 	position: absolute;
@@ -62,18 +234,24 @@ body {
 }
 
 .about{
+
 	min-height:100vh;
 	color:  rgb(213, 116, 233);
 	font-size: 25px;
-	margin-bottom:1px;
 	display:flex;
 	align-items:center;
-	padding:10vh 10vh;
+	margin-bottom:auto;
+	padding: 0vh 10vh;
 }
 
-.about-text h2{
-	padding-bottom: 30px;
-}
+
+
+
+
+
+   /* RESUME */
+
+
 
 
 .resume{
@@ -85,7 +263,7 @@ body {
 	align-items:center;
 	text-align: center;
 	padding-left: 500px;
-	padding-bottom:200px;
+	padding-bottom:20px;
 	
 	
 }
@@ -109,19 +287,42 @@ body {
 	-webkit-tap-highlight-color:transparent;
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
-	.resume {
 
-		padding-left: 230px;
-	}
 
-	.project-container{
 
-	width:500px;
-	padding-right: 150px;
-    margin: 0 auto 15px;
-	}
-	}
+
+@media screen and (max-width:999px){
+	
+	.banner-text ul{display:none}
+
+	.resume {padding-left:40%;}
+
+	.project-container{width:100%;}
+
+	.about-text h2{padding-left: 20%;}
+
+	.project-container{padding-right: 20%;}
+ 
+	#contact{width: 80%;}
+
+	.contact h1{width:100%;}
+
+	
+	
+
+
+
+
+
+}
+
+
+
+
+
+      /* PROJECT */
+
+
 
 .project {
 	min-height:50vh;
@@ -160,6 +361,14 @@ body {
 
 
 
+
+
+
+
+           /* CONTACT */
+
+
+
 .contact{
 	min-height:5vh;
 	color:  rgb(213, 116, 233);
@@ -188,6 +397,16 @@ body {
 .social-media a:hover{
 	color:#6c0a80;
 }
+
+
+
+
+
+
+     /* ANIMATION */
+
+
+
 
 .animation-area {
 	
@@ -260,6 +479,14 @@ body {
 		opacity: 0;
 	}
 }
+
+
+
+
+     
+    /* FOOTER */
+
+
 
 footer {
 	
